tests/reject/bad_add_2.ul
void main() {
     string x;
     x = "asdf" + 1.2;
}